--- a/AzureMiddayMingle/Views/Home/Suggestions.cshtml
+++ b/AzureMiddayMingle/Views/Home/Suggestions.cshtml
@@ -4,9 +4,4 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
+<p>@ViewBag.SuggestedRestaurants</p>
