Added view profile

--- a/AzureMiddayMingle/Views/Home/Success.cshtml
+++ b/AzureMiddayMingle/Views/Home/Success.cshtml
@@ -3,5 +3,8 @@
     ViewBag.Title = "Success";
 }
 
-<h2>Success</h2>
+<h2>You have successfully created a profile</h2>
+<p>
+    <a href="/Home/FetchProfile">View your profile</a>
+</p>
 
