--- a/AzureMiddayMingle/Views/Home/Success.cshtml
+++ b/AzureMiddayMingle/Views/Home/Success.cshtml
@@ -5,6 +5,6 @@
 
 <h2>You have successfully created a profile</h2>
 <p>
-    <a href="/Home/FetchProfile">View your profile</a>
+    <a href="/Home/MyProfile">View your profile</a>
 </p>
 
