--- a/AzureMiddayMingle/Views/Home/CreateProfile.cshtml
+++ b/AzureMiddayMingle/Views/Home/CreateProfile.cshtml
@@ -5,7 +5,7 @@
 
 <h2>CreateProfile</h2>
 
-<form id="form" name="form" method="post" action="Success">
+<form id="form" name="form" method="post" action="MyProfile">
     <p>
         <label for="EmployeeName">Name</label>
         <input type="text" name="EmployeeName" id="name" />
