Create profile link and preliminary API matching

--- a/AzureMiddayMingle/Views/Home/MyProfile.cshtml
+++ b/AzureMiddayMingle/Views/Home/MyProfile.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<AzureMiddayMingle.Models.Employee>
 
 @{
-    ViewBag.Title = "View";
+    ViewBag.Title = "My Profile";
 }
 
-<h2>View</h2>
+<h2>My Profile</h2>
 
 <p>
 </p>
