working on getting the accurate restaurants to appear

--- a/AzureMiddayMingle/Views/Home/CreateProfile.cshtml
+++ b/AzureMiddayMingle/Views/Home/CreateProfile.cshtml
@@ -28,27 +28,27 @@
     <p>
         <label>
             Interests (Choose 1)<br />
-            <input type="checkbox" name="Interest1" value="Music" id="Interests" />
+            <input type="radio" name="Interest1" value="Music" id="Interests" />
             Music
         </label>
         <br />
         <label>
-            <input type="checkbox" name="Interest1" value="Cooking" id="Interests" />
+            <input type="radio" name="Interest1" value="Cooking" id="Interests" />
             Cooking
         </label>
         <br />
         <label>
-            <input type="checkbox" name="Interest1" value="Technology" id="Interests" />
+            <input type="radio" name="Interest1" value="Technology" id="Interests" />
             Tech
         </label>
         <br />
         <label>
-            <input type="checkbox" name="Interest1" value="Outdoors" id="Interests" />
+            <input type="radio" name="Interest1" value="Outdoors" id="Interests" />
             Outdoors
         </label>
         <br />
         <label>
-            <input type="checkbox" name="Interest1" value="Sports" id="Interests" />
+            <input type="radio" name="Interest1" value="Sports" id="Interests" />
             Sports
         </label>
     </p>
@@ -56,27 +56,27 @@
         <p>
             <label>
                 Cuisine (Choose 1)<br />
-                <input type="checkbox" name="Cuisine1" value="Ethiopian" id="Cuisine" />
+                <input type="radio" name="Cuisine1" value="Ethiopian" id="Cuisine" />
                 Ethiopian
             </label>
             <br />
             <label>
-                <input type="checkbox" name="Cuisine1" value="Mediterranean" id="Cuisine" />
+                <input type="radio" name="Cuisine1" value="Mediterranean" id="Cuisine" />
                 Mediterranean
             </label>
             <br />
             <label>
-                <input type="checkbox" name="Cuisine1" value="Mexican" id="Cuisine" />
+                <input type="radio" name="Cuisine1" value="Mexican" id="Cuisine" />
                 Mexican
             </label>
             <br />
             <label>
-                <input type="checkbox" name="Cuisine1" value="Italian" id="Cuisine" />
+                <input type="radio" name="Cuisine1" value="Italian" id="Cuisine" />
                 Italian
             </label>
             <br />
             <label>
-                <input type="checkbox" name="Cuisine1" value="Chinese" id="Cuisine" />
+                <input type="radio" name="Cuisine1" value="Chinese" id="Cuisine" />
                 Chinese
             </label>
             <br />
