Suggestions work, profiles fixed...

--- a/AzureMiddayMingle/Views/Home/Suggestions.cshtml
+++ b/AzureMiddayMingle/Views/Home/Suggestions.cshtml
@@ -1,7 +1,11 @@
 ﻿@{
     ViewBag.Title = "Suggestions";
 }
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
+<h4>@ViewBag.Error</h4>
 <h3>@ViewBag.Message</h3>
 
+
 <p>@ViewBag.SuggestedRestaurants </p>
+
+@* Random generator for opposite matches. To generate different matches instead of same person each time. *@
