About you and contact information

--- a/AzureMiddayMingle/Views/Home/Contact.cshtml
+++ b/AzureMiddayMingle/Views/Home/Contact.cshtml
@@ -5,13 +5,16 @@
 <h3>@ViewBag.Message</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
+    Start Garden
+    40 Pearl St NW #200<br />
+    Grand Rapids, MI 49503<br />
+    <abbr title="Email">E:</abbr>
+    hello@startgarden.com
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Brianna Marshall:</strong>   <a href="mailto:brianna.yael@gmail.com">brianna.yael@gmail.com</a><br />
+    <strong>Jonaca Hudson:</strong> <a href="mailto:Marketing@example.com">jonacalhudson@gmail.com</a>
+    <strong>Lauren Babcock:</strong>   <a href="mailto:Support@example.com">laurenbabcock5@gmail.com</a><br />
+    <strong>Molly Guthrie:</strong> <a href="mailto:Marketing@example.com">mollyguthrie@gmail.com</a>
 </address>
