cleaning up headers and inserting contact breaks

--- a/AzureMiddayMingle/Views/Home/Contact.cshtml
+++ b/AzureMiddayMingle/Views/Home/Contact.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
-<h2>@ViewBag.Title.</h2>
+<h2></h2>
 <h3>@ViewBag.Message</h3>
 
 <address>
@@ -14,7 +14,7 @@
 
 <address>
     <strong>Brianna Marshall:</strong>   <a href="mailto:brianna.yael@gmail.com">brianna.yael@gmail.com</a><br />
-    <strong>Jonaca Hudson:</strong> <a href="mailto:Marketing@example.com">jonacalhudson@gmail.com</a>
+    <strong>Jonaca Hudson:</strong> <a href="mailto:Marketing@example.com">jonacalhudson@gmail.com</a><br />
     <strong>Lauren Babcock:</strong>   <a href="mailto:Support@example.com">laurenbabcock5@gmail.com</a><br />
     <strong>Molly Guthrie:</strong> <a href="mailto:Marketing@example.com">mollyguthrie@gmail.com</a>
 </address>
