--- a/AzureMiddayMingle/Views/Home/About.cshtml
+++ b/AzureMiddayMingle/Views/Home/About.cshtml
@@ -7,47 +7,77 @@
 <p>Do you work at a large company? Have you ever wondered, "How can I get to know all of my colleagues?" Welcome to the original profile matching application, where you can network with employees you might not know in your organization based on mutual interests. Select a desired cuisine, and this app will also give you and your match a list of suggested restaurants near your organization.</p>
 
 <h2>@ViewBag.Title.</h2>
-<p><center>Lauren Babcock</center></p>
-<img src="https://media.licdn.com/media/AAIA_wDGAAAAAQAAAAAAAAq1AAAAJGU5NjY4YWFmLTg2ZDItNGUwZi05Zjc2LWM0YTc3MDJkOTlhMg.jpg" alt="Lauren Babcock" />
-<p>
-    Lauren is a back-end developer with a focus on delivering solutions and products that will exceed customer expectations. I am a participant in a Grand Circus coding bootcamp where I am learning C#/.NET development in an career-focused setting. I also recently graduated from Grand Rapids Community College with my A.A.A.S in Computer Programming.
 
-    After 8 years in customer service positions, I am seeking to transition my experience and education to a tech position in the greater Grand Rapids area. I have strong organizational skills, time management skills, and the ability to work on and complete several projects simultaneously with little oversight.
-
-    Outside of my continued studies and independent projects, I love baking, playing video games and board games, and enjoying the great Michigan outdoors.
-</p>
-</br>
+<h3><center>Lauren Babcock <span class="label label-default"></span></center></h3>
 </br>
 </br>
 
 
-<p><center>Molly Guthrie</center></p>
-<img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAdwAAAAJGJlNTQ5OTMyLWFhMjMtNGViNi05ZGFlLTkyOWJlNmMyY2I4Mg.jpg" alt="Edit photo" />
-<p> Molly is a Network Security Specalist who is active in the security community, and looking to take the next step by studing code. She hopes to gain a better understanding on malware analyisis and securing the world of IoT. </p>
-</br>
-</br>
+<div class="row">
+    <div class="col-sm-6">
+        <img src="https://media.licdn.com/media/AAIA_wDGAAAAAQAAAAAAAAq1AAAAJGU5NjY4YWFmLTg2ZDItNGUwZi05Zjc2LWM0YTc3MDJkOTlhMg.jpg" class="img-circle" alt="Lauren Babcock" height="400" width="400" />
+    </div>
+    <div class="col-sm-6">
+        </br> </br> </br> </br> </br>Lauren is a back-end developer with a focus on delivering solutions and products that will exceed customer expectations. I am a participant in a Grand Circus coding bootcamp where I am learning C#/.NET development in an career-focused setting. I also recently graduated from Grand Rapids Community College with my A.A.A.S in Computer Programming.
+
+        After 8 years in customer service positions, I am seeking to transition my experience and education to a tech position in the greater Grand Rapids area. I have strong organizational skills, time management skills, and the ability to work on and complete several projects simultaneously with little oversight.
+
+        Outside of my continued studies and independent projects, I love baking, playing video games and board games, and enjoying the great Michigan outdoors.
+    </div>
+</div>
+
+    </br>
+
+<h3><center>Molly Guthrie <span class="label label-default"></span></center></h3>
+</br> </br>
+
+
+<div class="=" row">
+    <div class="col-sm-6">
+        <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAdwAAAAJGJlNTQ5OTMyLWFhMjMtNGViNi05ZGFlLTkyOWJlNmMyY2I4Mg.jpg" class="img-circle" alt="Edit photo" height="400" width="400" />
+    </div>
+    <div class="col-sm-6">
+        </br> </br> </br> </br> </br> Molly is a Network Security Specalist who is active in the security community, and looking to take the next step by studing code. She hopes to gain a better understanding on malware analyisis and securing the world of IoT.
+    </div>
+</div>
+
+  </br>  </br>  </br>  </br>  </br>  </br>  </br>  </br>  </br>  </br>  </br>  </br>  </br>  </br>  </br>  </br>  </br>  </br>  </br>  </br>
+
+<h3><center>Jonaca Hudson <span class="label label-default"></span></center></h3></br>
 </br>
 
-<p><center>Jonaca Hudson</center></p>
-<img src="https://media.licdn.com/media/AAEAAQAAAAAAAAhGAAAAJDRkMmZmNTVmLWE2ZjEtNGUxMi1iMjAzLWIxYzM5YTYzZGQwOA.jpg" alt="Jonaca Hudson" />
-<p>
-    Jonaca is a graphic design has been a passion of mine since I began pursuing it in 2006. I obtained my Associate in Applied Arts from Lansing Community College in 2011 and continued to receive my Bachelor of Fine Arts from Kendall College of Art and Design in 2016. I am blessed to have found a profession in which I genuinely enjoy myself.
-</p>
-</br>
-</br>
+
+<div class="=" row">
+    <div class="col-sm-6">
+        <img src="https://media.licdn.com/media/AAEAAQAAAAAAAAhGAAAAJDRkMmZmNTVmLWE2ZjEtNGUxMi1iMjAzLWIxYzM5YTYzZGQwOA.jpg" class="img-circle" alt="Jonaca Hudson" height="400" width="400" />
+    </div>
+    <div class="col-sm-6">
+        </br> </br> </br> </br> </br>Jonaca is a graphic design has been a passion of mine since I began pursuing it in 2006. I obtained my Associate in Applied Arts from Lansing Community College in 2011 and continued to receive my Bachelor of Fine Arts from Kendall College of Art and Design in 2016. I am blessed to have found a profession in which I genuinely enjoy myself.
+    </div>
+</div>
+
+  </br>  </br>  </br>  </br>  </br>  </br>  </br>  </br>  </br>  </br>  </br>  </br>  </br>  </br>  </br>  </br>  </br>  </br>  </br>  </br>
+
+<h3><center>Brianna Marshall <span class="label label-default"></span></center></h3></br>
 </br>
 
-<p><center>Brianna Marshall</center></p>
-<img src="https://media.licdn.com/media/AAIA_wDGAAAAAQAAAAAAAA3oAAAAJDBkNTg2YTg4LWM1ZjYtNGYzNC1hOTEzLTdhMDNhYjkxMjliZQ.jpg" alt="Brianna Marshall" />
-<p>
-    Brianna is a GIS Research Specialist at Calvin College. I assist clients in making wisdom-driven decisions for their organizations by offering quality services ranging from research design through reporting. I am passionate about research and technology that advances social equity, diversity, and inclusion.
 
-    After two years doing energizing and collaborative research I enrolled in a coding bootcamp at Grand Circus, where I am learning .NET (C#) programming. I am seeking an IT position in Michigan where I can launch a career in technology/software development and contribute my strengths in project management, leadership, and problem-solving.
+<div class="=" row">
+    <div class="col-sm-6">
+        <img src="https://media.licdn.com/media/AAIA_wDGAAAAAQAAAAAAAA3oAAAAJDBkNTg2YTg4LWM1ZjYtNGYzNC1hOTEzLTdhMDNhYjkxMjliZQ.jpg" class="img-circle" alt="Brianna Marshall" height="400" width="400" />
+    </div>
+    <div class="col-sm-6">
+        </br> </br> </br> </br> </br>Brianna is a GIS Research Specialist at Calvin College. I assist clients in making wisdom-driven decisions for their organizations by offering quality services ranging from research design through reporting. I am passionate about research and technology that advances social equity, diversity, and inclusion.
 
-    In my personal time I enjoy cooking, WERQ/Zumba, singing in gospel choirs, and serving various communities in West Michigan through organizations like Sisters Who Lead and Camp Henry.
-</p>
+        After two years doing energizing and collaborative research I enrolled in a coding bootcamp at Grand Circus, where I am learning .NET (C#) programming. I am seeking an IT position in Michigan where I can launch a career in technology/software development and contribute my strengths in project management, leadership, and problem-solving.
 
-</br>
+        In my personal time I enjoy cooking, WERQ/Zumba, singing in gospel choirs, and serving various communities in West Michigan through organizations like Sisters Who Lead and Camp Henry.
+    </div>
+</div>
+
+  </br>  </br>  </br>  </br>  </br>  </br>  </br>  </br>  </br>  </br>  </br>  </br>  </br>  </br>  </br>  </br>  </br>  </br>  </br>  </br> </br>  </br>  </br>  </br>  </br>  </br>  </br>  </br>  </br>
+
+
 <center>
     <a href="http://azuremiddaymingle.azurewebsites.net/Home/About">About |</a>
     <a href="http://azuremiddaymingle.azurewebsites.net/Home/CreateProfile">Create Profile |</a>
