--- a/AzureMiddayMingle/Views/Home/Contact.cshtml
+++ b/AzureMiddayMingle/Views/Home/Contact.cshtml
@@ -16,7 +16,7 @@
     <strong>Brianna Marshall:</strong>   <a href="mailto:brianna.yael@gmail.com">brianna.yael@gmail.com</a><br />
     <strong>Jonaca Hudson:</strong> <a href="mailto:Marketing@example.com">jonacalhudson@gmail.com</a><br />
     <strong>Lauren Babcock:</strong>   <a href="mailto:Support@example.com">laurenbabcock5@gmail.com</a><br />
-    <strong>Molly Guthrie:</strong> <a href="mailto:Marketing@example.com">mollyguthrie@gmail.com</a>
+    <strong>Molly Guthrie:</strong> <a href="mailto:Marketing@example.com">mollymarieguthrie@gmail.com</a>
 </address>
 
 </br>
