--- a/AzureMiddayMingle/Views/Home/Suggestions.cshtml
+++ b/AzureMiddayMingle/Views/Home/Suggestions.cshtml
@@ -78,6 +78,13 @@
 
 <h2>You should check out these restaurants for lunch together:</h2>
 <h4>@ViewBag.SuggestedRestaurants </h4>
+<button class="btn" type="button" onclick="location.href='@Url.Action("Suggestions", "Home")'">Next Match</button>
+@*<nav aria-label="...">
+    <ul class="pager">
+        <li><a href="#">Previous</a></li>
+        <li><a href="/Home/Suggestions">Next</a></li>
+    </ul>
+</nav>*@
 
 </br>
 <center>
