Fixed profile view after creating profile.

--- a/AzureMiddayMingle/Views/Home/About.cshtml
+++ b/AzureMiddayMingle/Views/Home/About.cshtml
@@ -18,11 +18,11 @@
         <img src="https://media.licdn.com/media/AAIA_wDGAAAAAQAAAAAAAAq1AAAAJGU5NjY4YWFmLTg2ZDItNGUwZi05Zjc2LWM0YTc3MDJkOTlhMg.jpg" class="img-circle" alt="Lauren Babcock" height="400" width="400" />
     </div>
     <div class="col-sm-6">
-        </br> </br> </br> </br> </br>Lauren is a back-end developer with a focus on delivering solutions and products that will exceed customer expectations. I am a participant in a Grand Circus coding bootcamp where I am learning C#/.NET development in an career-focused setting. I also recently graduated from Grand Rapids Community College with my A.A.A.S in Computer Programming.
+        </br> </br> </br> </br> </br>Lauren is a back-end developer with a focus on delivering solutions and products that will exceed customer expectations. She is a participant in a Grand Circus coding bootcamp where she is learning C#/.NET development in an career-focused setting. Lauren also recently graduated from Grand Rapids Community College with an A.A.A.S in Computer Programming.
 
-        After 8 years in customer service positions, I am seeking to transition my experience and education to a tech position in the greater Grand Rapids area. I have strong organizational skills, time management skills, and the ability to work on and complete several projects simultaneously with little oversight.
+        After 8 years in customer service positions, she am seeking to transition my experience and education to a tech position in the greater Grand Rapids area. She has strong organizational skills, time management skills, and the ability to work on and complete several projects simultaneously with little oversight.
 
-        Outside of my continued studies and independent projects, I love baking, playing video games and board games, and enjoying the great Michigan outdoors.
+        Outside of her continued studies and independent projects, Lauren loves baking, playing video games and board games, and enjoying the great Michigan outdoors.
     </div>
 </div>
 
