inserting bios and creating proper case list for API results

--- a/AzureMiddayMingle/Views/Home/About.cshtml
+++ b/AzureMiddayMingle/Views/Home/About.cshtml
@@ -18,11 +18,7 @@
         <img src="https://media.licdn.com/media/AAIA_wDGAAAAAQAAAAAAAAq1AAAAJGU5NjY4YWFmLTg2ZDItNGUwZi05Zjc2LWM0YTc3MDJkOTlhMg.jpg" class="img-circle" alt="Lauren Babcock" height="400" width="400" />
     </div>
     <div class="col-sm-6">
-        </br> </br> </br> </br> </br>Lauren is a back-end developer with a focus on delivering solutions and products that will exceed customer expectations. She is a participant in a Grand Circus coding bootcamp where she is learning C#/.NET development in an career-focused setting. Lauren also recently graduated from Grand Rapids Community College with an A.A.A.S in Computer Programming.
-
-        After 8 years in customer service positions, she am seeking to transition my experience and education to a tech position in the greater Grand Rapids area. She has strong organizational skills, time management skills, and the ability to work on and complete several projects simultaneously with little oversight.
-
-        Outside of her continued studies and independent projects, Lauren loves baking, playing video games and board games, and enjoying the great Michigan outdoors.
+        </br> </br> </br> </br> </br>Lauren is a back-end developer with a focus on delivering solutions and products that exceed customer expectations. After 8 years in customer service positions, Lauren is seeking to transition her experience and education to a tech position in the greater Grand Rapids area. Lauren has an A.A.A.S in Computer Programming from Grand Rapids Community College, and recently completed a bootcamp through Grand Circus, where she gained expertise in .NET (C#) development in a career-focused setting. She has strong organizational skills, time management skills, and the ability to work on and complete several projects simultaneously with little oversight. Outside of her continued studies and independent projects, she loves baking, playing video games and board games, and enjoying the great Michigan outdoors.
     </div>
 </div>
 
@@ -37,7 +33,7 @@
         <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAdwAAAAJGJlNTQ5OTMyLWFhMjMtNGViNi05ZGFlLTkyOWJlNmMyY2I4Mg.jpg" class="img-circle" alt="Edit photo" height="400" width="400" />
     </div>
     <div class="col-sm-6">
-        </br> </br> </br> </br> </br> Molly is a Network Security Specalist who is active in the security community, and looking to take the next step by studing code. She hopes to gain a better understanding on malware analyisis and securing the world of IoT.
+        </br> </br> </br> </br> </br> Molly is a Network Security Specialist at Bissell Homecare, INC. She is pursuing a career in IT security and is looking to enhance her knowledge of malware analysis and securing the world of IoT. Molly has a B.S. in Computer and Information Systems Security/Information Assurance from American Military University. She also recently completed a bootcamp through Grand Circus, where she gained expertise in .NET (C#) development in a career-focused setting. Molly loves her position at Bissell and brings tenacity, curiosity and excellence to her work every day. Outside of work, Molly stays active in the security community through events, and local meetups. She enjoys spontaneous adventures with her family, spending time outdoors, and playing with her dog Mae.
     </div>
 </div>
 
@@ -52,7 +48,7 @@
         <img src="https://media.licdn.com/media/AAEAAQAAAAAAAAhGAAAAJDRkMmZmNTVmLWE2ZjEtNGUxMi1iMjAzLWIxYzM5YTYzZGQwOA.jpg" class="img-circle" alt="Jonaca Hudson" height="400" width="400" />
     </div>
     <div class="col-sm-6">
-        </br> </br> </br> </br> </br>Jonaca is a graphic design has been a passion of mine since I began pursuing it in 2006. I obtained my Associate in Applied Arts from Lansing Community College in 2011 and continued to receive my Bachelor of Fine Arts from Kendall College of Art and Design in 2016. I am blessed to have found a profession in which I genuinely enjoy myself.
+        </br> </br> </br> </br> </br>Jonaca is a graphic designer at Aurikk Brand Movement Group. She is passionate about increasing the capacity of people and organizations through appealing and relevant visual communications. Jonaca has an A.A in Applied Arts from Lansing Community College and a B.F.A from Kendall College of Art and Design. She has continued her education by recently completing a bootcamp through Grand Circus, where she gained expertise in .NET (C#) development in a career-focused setting. Jonaca is a collaborative, detail-oriented, and adaptable professional seeking a position that combines her unique skillset of software development and graphic design expertise. In her spare time, Jonaca enjoys movie-watching, cooking vegan and vegetarian cuisine, and spending quality time with her adorable 3-year old son, Isaiah.
     </div>
 </div>
 
@@ -67,11 +63,7 @@
         <img src="https://media.licdn.com/media/AAIA_wDGAAAAAQAAAAAAAA3oAAAAJDBkNTg2YTg4LWM1ZjYtNGYzNC1hOTEzLTdhMDNhYjkxMjliZQ.jpg" class="img-circle" alt="Brianna Marshall" height="400" width="400" />
     </div>
     <div class="col-sm-6">
-        </br> </br> </br> </br> </br>Brianna is a GIS Research Specialist at Calvin College. I assist clients in making wisdom-driven decisions for their organizations by offering quality services ranging from research design through reporting. I am passionate about research and technology that advances social equity, diversity, and inclusion.
-
-        After two years doing energizing and collaborative research I enrolled in a coding bootcamp at Grand Circus, where I am learning .NET (C#) programming. I am seeking an IT position in Michigan where I can launch a career in technology/software development and contribute my strengths in project management, leadership, and problem-solving.
-
-        In my personal time I enjoy cooking, WERQ/Zumba, singing in gospel choirs, and serving various communities in West Michigan through organizations like Sisters Who Lead and Camp Henry.
+        </br> </br> </br> </br> </br>Brianna is a GIS Research Specialist at Calvin College. She assists clients in making wisdom-driven decisions for their organizations by offering quality services ranging from research design through reporting. She is passionate about research and information technology that advances social equity, diversity, and cultural inclusion. Brianna has a B.S in Geology, and recently completed a bootcamp through Grand Circus, where she gained expertise in .NET (C#) development in a career-focused setting. She is seeking an IT position in Michigan where she can launch a career in technology/software development and contribute her strengths in project management, leadership, and problem-solving. In her personal time she enjoys hip-hop fitness, singing, and serving various communities in West Michigan through a variety of organizations and committees.
     </div>
 </div>
 
